apps/base/homeassistant/mosquitto.yaml
apiVersion: v1
kind: Service
metadata:
  name: mosquitto
  namespace: homeassistant
  labels:
    app.kubernetes.io/component: service
    app.kubernetes.io/name: mosquitto
spec:
  selector:
    app.kubernetes.io/component: broker
    app.kubernetes.io/name: mosquitto
  ports:
    - name: mqtt
      port: 1883
      targetPort: mqtt
      protocol: TCP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mosquitto
  namespace: homeassistant
  labels:
    app.kubernetes.io/component: broker
    app.kubernetes.io/name: mosquitto
spec:
  revisionHistoryLimit: 3
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/component: broker
      app.kubernetes.io/name: mosquitto
  template:
    metadata:
      labels:
        app.kubernetes.io/component: broker
        app.kubernetes.io/name: mosquitto
    spec:
      nodeSelector:
        kubernetes.io/hostname: abaddon
      containers:
        - name: mosquitto
          image: docker.io/library/eclipse-mosquitto:2.0.22 # {"$imagepolicy": "homeassistant:mosquitto"}
          imagePullPolicy: Always
          ports:
            - name: mqtt
              containerPort: 1883
              protocol: TCP
          resources:
            requests:
              cpu: 10m
              memory: 32Mi
            limits:
              cpu: 200m
              memory: 128Mi
          volumeMounts:
            - name: config
              mountPath: /mosquitto/config
            - name: mosquitto-data
              mountPath: /mosquitto/data
      volumes:
        - name: config-template
          configMap:
            name: mosquitto
        - name: config
          emptyDir: {}
        - name: mosquitto-data
          persistentVolumeClaim:
            claimName: mosquitto-pvc
