apps/base/homeassistant/postgres.yaml
apiVersion: v1
kind: Service
metadata:
  name: homeassistant-pgsql
  namespace: homeassistant
  labels:
    app.kubernetes.io/component: service
    app.kubernetes.io/name: homeassistant-pgsql
spec:
  selector:
    app.kubernetes.io/component: database
    app.kubernetes.io/name: homeassistant-pgsql
  type: NodePort
  ports:
    - name: pgsql
      port: 5432
      protocol: TCP
      targetPort: pgsql
      nodePort: 30008
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: homeassistant-pgsql
  namespace: homeassistant
  labels:
    app.kubernetes.io/component: database
    app.kubernetes.io/name: homeassistant-pgsql
spec:
  serviceName: homeassistant-pgsql
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/component: database
      app.kubernetes.io/name: homeassistant-pgsql
  template:
    metadata:
      labels:
        app.kubernetes.io/component: database
        app.kubernetes.io/name: homeassistant-pgsql
    spec:
      containers:
        - name: homeassistant-postgressql-db
          image: postgres:14.5
          # command: ['/bin/bash', '-c', '--']
          # args: ['while true; do sleep 600; done;']
          args:
            - -c
            - max_wal_size=4096
            - -c
            - min_wal_size=2048
          ports:
            - name: pgsql
              containerPort: 5432
          resources:
            requests:
              cpu: 10m
              memory: 100Mi
            limits:
              cpu: 2000m
              memory: 500Mi
          volumeMounts:
            - name: homeassistant-data
              mountPath: /var/lib/postgresql/data
              subPath: pgdata
          lifecycle:
            preStop:
              exec:
                command:
                  [
                    '/usr/local/bin/pg_ctl -D /var/lib/postgresql/data/pgdata -w -t 60 -m fast stop',
                  ]
      terminationGracePeriodSeconds: 60
      volumes:
        - name: homeassistant-data
          persistentVolumeClaim:
            claimName: homeassistant-pg-pvc
